[Fix] Portfolio Modal's & Header z-index

--- a/styles/Header/_Header.scss
+++ b/styles/Header/_Header.scss
@@ -19,7 +19,7 @@ header {
   // fixed navbar
   position: sticky;
   top: 0;
-  z-index: 99;
+  z-index: 10;
 
   .logo-wrapper {
     line-height: 70px;
