--- a/styles/default.css
+++ b/styles/default.css
@@ -1153,7 +1153,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 99;
+  z-index: 10;
 }
 
 header .logo-wrapper {
@@ -1534,6 +1534,7 @@ input[type=text]:focus, input[type=password]:focus {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9);
+  z-index: 20;
 }
 
 .portfolio-modal-backdrop .modal-content {
